--- a/docs/source/machineLearning/01_lr.rst
+++ b/docs/source/machineLearning/01_lr.rst
@@ -5,7 +5,7 @@ Logistic Regression
 
 .. math::
 
-  h_\theta(\mathbf{x}) & = & \  g(\theta^\top \mathbf{x}),\\
+  h_\theta(x) & = & \  g(\theta^\top x),\\
   g(z) & = & \  \frac{1}{1+e^{-z}},\\
   g^\prime(z) & = & \  (1-g(z))g(z) \in (0, 0.25].
 
@@ -13,16 +13,16 @@ Logistic Regression
 
 .. math::
 
-  \mathcal{l}_\theta = -\frac{1}{m} \sum_{i=1}^m y^{(i)} \log h_\theta(\mathbf{x}^{(i)}) + (1 - y^{(i)}) \log(1 - h_\theta(\mathbf{x}^{(i)}))
+  \mathcal{l}_\theta = -\frac{1}{m} \sum_{i=1}^m y_i \log h_\theta(x_i) + (1 - y_i) \log(1 - h_\theta(x_i))
 
-虽然使用了sigmoid函数，但该模型仍然是线性分类器，因为即使不经过sigmoid函数也可以得出分类结果（与0比较），sigmoid将其转化为概率。
+虽然使用了 sigmoid 函数，但该模型仍然是线性分类器，因为即使不经过 sigmoid 函数也可以得出分类结果（与 0 比较），sigmoid 将其转化为概率。
 
 基本假设
 -----------
 
 1. 数据服从伯努利分布 :math:`y \sim Bernoulli(\phi)`
 
-2. 样例为正例的概率为 :math:`\phi=h_\theta(\mathbf{x})`
+2. 样例为正例的概率为 :math:`\phi=h_\theta(x)`
 
 求解方法
 ------------
@@ -60,16 +60,16 @@ Logistic Regression
 
   - 极大似然：希望最大化每个样本的分类正确概率，样本服从伯努利分布。
 
-  - 将极大似然取对数后就等同于对数损失函数，在LR模型中，这个损失函数使参数更新速度较快：
+  - 将极大似然取对数后就等同于对数损失函数，在 LR 模型中，这个损失函数使参数更新速度较快：
 
     .. math::
 
-      \theta_j \leftarrow \theta_j + \alpha \times \frac{1}{m} \sum_{i=1}^m (y^{(i)} - h_\theta(\mathbf{x}^{(i)}))\mathbf{x}_j^{(i)}
+      \theta^{(j)} \leftarrow \theta^{(j)} + \alpha \times \frac{1}{m} \sum_{i=1}^m (y_i - h_\theta(x_i))x_i^{(j)}
 
-    只与 :math:`y^{(i)},\mathbf{x}^{(i)}` 有关，与 :math:`h_\theta` 的梯度无关。
+    可见梯度只与 :math:`y_i,x_i` 有关，与 :math:`h_\theta` 的导数无关。其中上标 :math:`(j)` 表示向量的第 :math:`j` 维分量。
 
   - 为什么不用平方损失函数（多用于线性回归）？在线性回归中，前提假设是 :math:`y` 服从正态分布，即 :math:`y \sim \mathcal{N}(\mu, \sigma^2)` 。
-    另外，如果使用平方损失函数， :math:`\theta` 更新与 :math:`h_\theta` 的梯度有关，而sigmoid函数的梯度在定义域内小于0.25，导致参数更新慢。
+    另外，如果使用平方损失函数， :math:`\theta` 更新与 :math:`h_\theta` 的梯度有关，而 sigmoid 函数的梯度在定义域内小于0.25，导致参数更新慢。
 
 2. 训练中如何有很多特征高度相关或将某个特征重复100遍，影响如何？
 
