--- a/docs/source/python/03_is.rst
+++ b/docs/source/python/03_is.rst
@@ -12,17 +12,19 @@ is和==
 .. code-block:: python
     :linenos:
 
-    a = "hello"
-    b = "hello"
-    print a==b # True
-    print a is b # False
-    print id(a)
-    print id(a)
+    >>> a = "hello"
+    >>> b = "hello"
+    >>> a==b
+	True
+    >>> a is b 
+	False
 
-    a = [1,2,3]
-    b = a
-    print a==b # True
-    print a is b # True
+    >>> a = [1,2,3]
+    >>> b = a
+    >>> a==b 
+	True
+    >>> a is b
+	True
 
 None
 --------
